syntax = "proto3";

import "google/protobuf/any.proto";

package messages;
option go_package=".;messages";

message RpcRequestMessage {
    int32   SequenceID = 1;
	fixed64 ForwardTime = 2;
	fixed64 Timeout = 3;
	google.protobuf.Any Message = 4;    
}